--- a/app/views/categories/_form.html.erb
+++ b/app/views/categories/_form.html.erb
@@ -3,7 +3,7 @@
     <div class="form-group">
       <label for="name"><%= t "categories.attributes.name" %></label>
       <%= f.text_field :name, class: "form-control",
-        placeholder: t("categories.placeholder.name") %>
+        placeholder: t("categories.placeholder.name"), autofocus: true %>
     </div>
   </div>
 
