--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -8,6 +8,12 @@
           <span><%= t "sidebars.category" %></span>
         <% end %>
       </li>
+      <li>
+        <%= link_to incomes_path do %>
+          <i class="fa fa-book"></i>
+          <span><%= t "sidebars.income" %></span>
+        <% end %>
+      </li>
     </ul>
   </section>
 </aside>
