--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -14,6 +14,12 @@
           <span><%= t "sidebars.income" %></span>
         <% end %>
       </li>
+      <li>
+        <%= link_to outcomes_path do %>
+          <i class="fa fa-book"></i>
+          <span><%= t "sidebars.outcome" %></span>
+        <% end %>
+      </li>
     </ul>
   </section>
 </aside>
