--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -20,6 +20,12 @@
           <span><%= t "sidebars.outcome" %></span>
         <% end %>
       </li>
+      <li>
+        <%= link_to months_path do %>
+          <i class="fa fa-book"></i>
+          <span><%= t "sidebars.month" %></span>
+        <% end %>
+      </li>
     </ul>
   </section>
 </aside>
