CRUD item buying

--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -26,6 +26,12 @@
           <span><%= t "sidebars.month" %></span>
         <% end %>
       </li>
+      <li>
+        <%= link_to item_buyings_path do %>
+          <i class="fa fa-book"></i>
+          <span><%= t "sidebars.item_buying" %></span>
+        <% end %>
+      </li>
     </ul>
   </section>
 </aside>
