--- a/app/views/outcomes/index.html.erb
+++ b/app/views/outcomes/index.html.erb
@@ -21,6 +21,7 @@
             <%= t "outcomes.attributes.name" %>
           </th>
           <th><%= t "outcomes.attributes.value" %></th>
+          <th><%= t "outcomes.attributes.note" %></th>
           <th></th>
           <th></th>
         </tr>
