--- a/app/views/incomes/index.html.erb
+++ b/app/views/incomes/index.html.erb
@@ -21,6 +21,7 @@
             <%= t "incomes.attributes.name" %>
           </th>
           <th><%= t "incomes.attributes.value" %></th>
+          <th><%= t "incomes.attributes.note" %></th>
           <th></th>
           <th></th>
         </tr>
