--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -1,32 +1,32 @@
 <aside class="main-sidebar">
   <section class="sidebar">
-    <ul class="sidebar-menu">
+    <ul class="sidebar-menu tree">
       <li class="header text-uppercase"><%= t "app.main_functions" %></li>
-      <li>
+      <li class="treeview">
         <%= link_to categories_path do %>
           <i class="fa fa-book"></i>
           <span><%= t "sidebars.category" %></span>
         <% end %>
       </li>
-      <li>
+      <li class="treeview">
         <%= link_to incomes_path do %>
           <i class="fa fa-book"></i>
           <span><%= t "sidebars.income" %></span>
         <% end %>
       </li>
-      <li>
+      <li class="treeview">
         <%= link_to outcomes_path do %>
           <i class="fa fa-book"></i>
           <span><%= t "sidebars.outcome" %></span>
         <% end %>
       </li>
-      <li>
+      <li class="treeview">
         <%= link_to months_path do %>
           <i class="fa fa-book"></i>
           <span><%= t "sidebars.month" %></span>
         <% end %>
       </li>
-      <li>
+      <li class="treeview">
         <%= link_to item_buyings_path do %>
           <i class="fa fa-book"></i>
           <span><%= t "sidebars.item_buying" %></span>
