Add balance page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,4 @@
-<div>
-  Trung
+<div id="monthly-blance" data-category="<%= @monthly_blance[:categories] %>"
+  data-statistics="<%= @monthly_blance[:monthly_blance] %>">
+
 </div>
