--- a/app/views/incomes/_income_table.html.erb
+++ b/app/views/incomes/_income_table.html.erb
@@ -5,9 +5,8 @@
         <th>#</th>
         <th><%= t "incomes.attributes.month" %></th>
         <th><%= t "incomes.attributes.category" %></th>
-        <th>
-          <%= t "incomes.attributes.name" %>
-        </th>
+        <th><%= t "incomes.attributes.name" %></th>
+        <th><%= t "incomes.attributes.main_income" %></th>
         <th><%= t "incomes.attributes.value" %></th>
         <th><%= t "incomes.attributes.note" %></th>
         <th></th>
