--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @income, role: "form" do |f| %>
+  <%= render "shared/errors_messages", object: f.object %>
+
   <div class="box-body">
     <div class="form-group">
       <label for="name"><%= t "incomes.attributes.name" %></label>
@@ -7,9 +9,19 @@
     </div>
 
     <div class="form-group">
-      <label for="value"><%= t "incomes.attributes.value" %></label>
-      <%= f.number_field :value, class: "form-control",
-        placeholder: t("incomes.placeholder.value"), autofocus: true %>
+      <div class="row">
+        <div class="col-md-6">
+          <label for="value"><%= t "incomes.attributes.value" %></label>
+          <%= f.number_field :value, class: "form-control",
+            placeholder: t("incomes.placeholder.value"), autofocus: true %>
+        </div>
+        <div class="col-md-6">
+          <label for="note"><%= t "incomes.attributes.main_income" %></label>
+          <div>
+            <%= f.check_box :main_income, autofocus: true %>
+          </div>
+        </div>
+      </div>
     </div>
 
     <div class="form-group">
