--- a/app/views/outcomes/_form.html.erb
+++ b/app/views/outcomes/_form.html.erb
@@ -1,4 +1,6 @@
 <%= form_for @outcome, role: "form" do |f| %>
+  <%= render "shared/errors_messages", object: f.object %>
+
   <div class="box-body">
     <div class="form-group">
       <label for="name"><%= t "outcomes.attributes.name" %></label>
