--- a/app/views/incomes/_income_statistic.html.erb
+++ b/app/views/incomes/_income_statistic.html.erb
@@ -1,4 +1,6 @@
 <div class="tab-pane fade" role="tabpanel" id="income-statistics" aria-labelledby="statistics-tab">
   <div id="statistics" data-statistics="<%= @income_statistics %>"
-    data-type="incomes" data-date=<%= @month.first %>></div>
+    data-type="incomes"
+    data-date="<%= params[:month] || l(Date.today, format: :month) %>">
+  </div>
 </div>
