--- a/app/views/outcomes/_outcome_table.html.erb
+++ b/app/views/outcomes/_outcome_table.html.erb
@@ -5,9 +5,7 @@
         <th>#</th>
         <th><%= t "outcomes.attributes.month" %></th>
         <th><%= t "outcomes.attributes.category" %></th>
-        <th>
-          <%= t "outcomes.attributes.name" %>
-        </th>
+        <th><%= t "outcomes.attributes.name" %></th>
         <th><%= t "outcomes.attributes.value" %></th>
         <th><%= t "outcomes.attributes.note" %></th>
         <th></th>
