--- a/app/views/incomes/_form.html.erb
+++ b/app/views/incomes/_form.html.erb
@@ -12,7 +12,7 @@
       <div class="row">
         <div class="col-md-6">
           <label for="value"><%= t "incomes.attributes.value" %></label>
-          <%= f.text_field :value, class: "form-control currency",
+          <%= f.number_field :value, class: "form-control",
             placeholder: t("incomes.placeholder.value"), autofocus: true %>
         </div>
         <div class="col-md-6">
